@@ -2,7 +2,7 @@
 
 #include <iostream> // TMP
 
-#include <climits>
+#include <limits>
 #include <algorithm>
 #include <functional>
 #include <iterator>
