@@ -3,7 +3,7 @@
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
 
-#include <climits>
+#include <limits>
 #include <iostream>
 #include <deque>
 #include <stack>
@@ -232,8 +232,8 @@ inline void ScannerBase::push(std::string const &str)
 
 inline bool ScannerBase::atFinalState()
 {
-    return d_final.notAtBOL.rule != UINT_MAX || 
-            (d_atBOL && d_final.atBOL.rule != UINT_MAX);
+    return d_final.notAtBOL.rule != std::numeric_limits<size_t>::max() || 
+            (d_atBOL && d_final.atBOL.rule != std::numeric_limits<size_t>::max());
 }
 
 inline void ScannerBase::setFilename(std::string const &name)
