@@ -1,4 +1,4 @@
-// Generated by Flexc++ V0.96.00 on Thu, 12 Apr 2012 10:27:20 +0200
+// Generated by Flexc++ V0.97.00 on Thu, 12 Apr 2012 10:40:33 +0200
 
 #include <iostream>
 #include <fstream>
@@ -1735,7 +1735,7 @@ ScannerBase::ScannerBase(std::istream &in, std::ostream &out)
     d_out(new std::ostream(out.rdbuf())),
     d_sawEOF(false),
     d_atBOL(true),
-    d_tailCount(69, UINT_MAX),
+    d_tailCount(69, numeric_limits<size_t>::max()),
 // $insert interactiveInit
     d_in(0),
     d_input(new std::istream(in.rdbuf())),
@@ -1762,7 +1762,7 @@ ScannerBase::ScannerBase(std::string const &infilename, std::string const &outfi
                                   new std::ofstream(outfilename)),
     d_sawEOF(false),
     d_atBOL(true),
-    d_tailCount(69, UINT_MAX),
+    d_tailCount(69, numeric_limits<size_t>::max()),
     d_input(new std::ifstream(infilename)),
     d_dfaBase__(s_dfa__)
 {}
@@ -1910,7 +1910,7 @@ void ScannerBase::accept(size_t nChars)          // old name: less
 void ScannerBase::determineMatchedSize(FinData const &final)
 {
     size_t length = final.matchLen;
-    if (final.tailCount != UINT_MAX)
+    if (final.tailCount != numeric_limits<size_t>::max())
         length -= final.tailCount;
 
     d_input.reRead(d_matched, length);      // reread the tail section
@@ -1926,9 +1926,9 @@ size_t ScannerBase::matched__(size_t ch)
     d_input.reRead(ch);
 
     if (!d_atBOL)
-        d_final.atBOL.rule = UINT_MAX;
+        d_final.atBOL.rule = numeric_limits<size_t>::max();
 
-    FinData &final = d_final.atBOL.rule == UINT_MAX ? 
+    FinData &final = d_final.atBOL.rule == numeric_limits<size_t>::max() ? 
                             d_final.notAtBOL
                         :
                             d_final.atBOL;
@@ -1983,7 +1983,7 @@ void ScannerBase::echoFirst__(size_t ch)
     //  If the s_rfc__ element has its COUNT flag set then set the 
     // d_tailCount[rule] value to the element's tailCount value, if it has its 
     // INCREMENT flag set then increment d_tailCount[rule]
-    //  If neither was set set the d_tailCount[rule] to UINT_MAX
+    //  If neither was set set the d_tailCount[rule] to numeric_limits<size_t>::max()
     // 
     // If the s_rfc__ element has its FINAL flag set then store the rule number
     // in d_final.second. If it has its FINAL + BOL flags set then store the
@@ -2005,7 +2005,7 @@ void ScannerBase::inspectRFCs__()
         if (flag & INCREMENT)
             ++d_tailCount[rule];
         else 
-            d_tailCount[rule] = (flag & COUNT) ? rfc[ACCCOUNT] : UINT_MAX;
+            d_tailCount[rule] = (flag & COUNT) ? rfc[ACCCOUNT] : numeric_limits<size_t>::max();
 
         if (flag & FINAL)
         {
@@ -2017,8 +2017,8 @@ void ScannerBase::inspectRFCs__()
 
 void ScannerBase::reset__()
 {
-    d_final = Final { {UINT_MAX, UINT_MAX, UINT_MAX }, 
-                      {UINT_MAX, UINT_MAX, UINT_MAX } };
+    d_final = Final { {numeric_limits<size_t>::max(), numeric_limits<size_t>::max(), numeric_limits<size_t>::max() }, 
+                      {numeric_limits<size_t>::max(), numeric_limits<size_t>::max(), numeric_limits<size_t>::max() } };
     d_state = 0;
     d_return = true;
 
