@@ -1,9 +1,9 @@
-// Generated by Flexc++ V0.96.00 on Thu, 12 Apr 2012 10:27:20 +0200
+// Generated by Flexc++ V0.97.00 on Thu, 12 Apr 2012 10:40:33 +0200
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
 
-#include <climits>
+#include <limits>
 #include <iostream>
 #include <deque>
 #include <string>
@@ -265,8 +265,8 @@ inline void ScannerBase::push(std::string const &str)
 
 inline bool ScannerBase::atFinalState()
 {
-    return d_final.notAtBOL.rule != UINT_MAX || 
-            (d_atBOL && d_final.atBOL.rule != UINT_MAX);
+    return d_final.notAtBOL.rule != std::numeric_limits<size_t>::max() || 
+            (d_atBOL && d_final.atBOL.rule != std::numeric_limits<size_t>::max());
 }
 
 inline void ScannerBase::setFilename(std::string const &name)
